--- a/student.ipynb
+++ b/student.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "26e54b5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to MongoDB server\n"
+     ]
+    }
+   ],
    "source": [
     "# ----------------------------\n",
     "#  Connect to MongoDB Server\n",
@@ -13,7 +21,7 @@
     "\n",
     "from pymongo import MongoClient\n",
     "\n",
-    "MONGODB_URI = \"REPLACE_WITH_YOUR_MONGODB\" # Replace with your mongodb uri\n",
+    "MONGODB_URI = \"mongodb+srv://farazkhoso299_db_user:fnzeofLHATnQNc9v@cd.gwjkeou.mongodb.net/\" # Replace with your mongodb uri\n",
     "\n",
     "client = MongoClient(MONGODB_URI)  # Replace with your MongoDB URI\n",
     "print(\"Connected to MongoDB server\")\n"
